syntax = "proto3";

package buf.connect.demo.eliza.v1;

message SayRequest {
  string sentence = 1;
}

message SayResponse {
  string sentence = 1;
}

message UserRequest {
  string name = 1;
  string email = 2;
  string postTitle = 3;
  string bio = 4;
}

message UserResponse {
  string created_user_name = 1;
}

service ElizaService {
  rpc Say(SayRequest) returns (SayResponse) {}
  rpc CreateUser(UserRequest) returns (UserResponse) {}
}
